<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFDCFEFC"
    tools:context=".RegisterUser">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:paddingLeft="40dp"
                android:paddingRight="40dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:paddingLeft="60dp"
                    android:paddingRight="60dp"
                    android:gravity="center"
                    android:text="@string/sign_up"
                    android:textAllCaps="true"
                    android:textColor="#6d6d64"
                    android:textSize="23sp"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/etFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@android:color/white"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@android:color/white"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:padding="10dp" />


                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@android:color/white"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@android:color/white"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:padding="10dp" />

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="#f05924"
                    android:text="@string/register"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/already_having_account"
                    android:textColor="#797978" />

                <Button
                    android:id="@+id/btnRegisterLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="#aaa"
                    android:text="@string/log_in"
                    android:textColor="@android:color/white" />


            </LinearLayout>

        </RelativeLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>